objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>fcio1__Holdout_Days__c</fullName>
        <label>Holdout Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Holdout_Expiry_Data__c</fullName>
        <label>Holdout Expiry Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Holdout_Expiry_Date__c</fullName>
        <label>Holdout Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Holdout_Start_Date__c</fullName>
        <label>Holdout Start Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>